src/main/content/_assets/css/home.scss
/* ... */
#logos_title {
    font-family: BunueloBold, Arial Narrow, Helvetica, Arial;
    font-size: 30px;
    text-align: center;
    color: #3F4664;
    padding-bottom: 30px;
}

#logo_image_row {
    padding-bottom: 45px;
    border-bottom: 2px solid #979797;

    & img {
        height: fit-content;
    }
}

#microprofile_logo {
    padding-left: 50px;
}

#jakarta_ee_logo {
    padding-right: 50px;
    float: right;
}

.logos_row {
    padding-top: 32px;

    & p {
        padding: 5px 22px;
        border-radius: 30px;
        color: #ffffff;
        background-color: #3F4664;;
        margin-left: 30px;
        margin-right: 30px;
        margin-bottom: 0px;
    }
}


/* NEWS */

#news_container {
    padding-top: 84px;
}

.cloud_images_div {
    position: absolute;
    height: 0px;
}

#get_involved_row {
    padding-top: 40px;
}

#cloud_8 {
    position: relative;
    top: -189px;
    right: 450px;
}

#cloud_9 {
    position: relative;
    top: -445px;
    right: 315px;
    transform: scaleX(-1);
}

#cloud_10 {
    position: relative;
    top: -770px;
    right: -800px;
}

#cloud_11 {
    position: relative;
    top: -1085px;
    right: -1185px;
}

#cloud_12 {
    position: relative;
    top: -1145px;
    right: 330px;
}

#cloud_13 {
    position: relative;
    top: -1250px;
    right: -1155px;
    transform: scaleX(-1);
}

#cloud_14 {
    position: relative;
    top: -1200px;
    right: -200px;
}

#news_title {
    font-family: BunueloLight, Arial Narrow, Helvetica, Arial;
    font-size: 40px;
    text-align: center;
    position: relative;
    z-index: 1;
}

#news_text {
    font-size: 16px;
    text-align: center;
    position: relative;
    z-index: 1;
    margin-bottom: 62px;
}

#blog_post {
    box-shadow: 0 2px 4px 0 rgba(63,70,89,0.31);
    border-radius: 3px;
    padding: 47px 57px;
    background: #ffffff;
    margin-bottom: 18px;
}

.blog_post_title_link {
    font-family: BunueloLight, Arial Narrow, Helvetica, Arial;
    font-size: 35px;
    color: #5E6B8D;
    transition: color .2s;

    &:hover {
        color: #3F4659;
    }
}

.continued_text {
    font-size: 16px;
    color: #F69144;
}

.blog_post_author_data_container {
    margin-bottom: 20px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;

    @media (max-width: 767.98px) {
        display: none;
    }
}

.author_images_container {
    display: inline-block;
    margin-right: 8px;
}

.blog_post_author_image {
    height: 32px;
    width: 32px;
    border-radius: 100%;
    vertical-align: middle;
}

.blog_post_author_name {
    font-size: 16px;
    color: #24253A;
}

.blog_post_date {
    font-size: 16px;
    margin-left: 2px;
    color: #6f7878;
}

#blog_link {
    display: block;
    font-size: 16px;
    font-weight: 500;
    color: #24253A;
    background-color: #ABD155;
    border-radius: 7px;
    padding: 12px 0px;
    text-align: center;
    transition: background-color .2s;    
    width: 283px;
    
    &:hover {
        color: #24253A;
        background-color: #C7EE63;
    }
}

.blog_post_paragraph {
    font-size: 16px;
}

#twitter_follow_div {
    box-shadow: 0 2px 4px 0 rgba(63,70,89,0.31);
    border-radius: 3px;
    padding: 14px 22px;
    margin-bottom: 18px;
    background: #ffffff;
}

#ufo_logo {
    width: 59px;
    height: 43px;
}

#twitter_handle {
    display: inline-block;
    font-size: 22px;
    color: #5D6A8E;
    margin-bottom: 0px;

    &:hover {
        color: #3F4659;
    }
}

#twitter_link {
    display: inline-block;
    float: right;
    font-size: 16px;
    font-weight: 500;
    color: #24253A;
    background-color: #ABD155;
    border-radius: 7px;
    padding: 8px 0px;
    text-align: center;
    transition: background-color .2s;    
    width: 130px;
    
    &:hover {
        color: #24253A;
        background-color: #C7EE63;
    }
}

#twitter_iframe_div {
    box-shadow: 0 2px 4px 0 rgba(63, 70, 89, 0.31);
    border-radius: 3px;
    margin-bottom: 60px;
}


/* SUPPORT */

#support_background {
    background-image: radial-gradient(circle at top right, #141427 0%, #515B7D 70%, #515B7D 100%);
    height: 780px;
}

#support_container {
    padding-top: 90px;
}

#support_title {
    font-size: 35px;
    font-family: BunueloLight, Arial Narrow, Helvetica, Arial;
    color: #ffffff;
    margin-bottom: 23px;
}

#support_text {
    font-size: 16px;
    color: #C8D2D2;
    padding-bottom: 40px;
    margin-bottom: 0px;
}

#support_link {
    display: block;
    font-size: 17px;
    font-weight: 500;
    color: #24253A;
    background-color: #E6EDA8;
    border-radius: 7px;
    padding: 12px 0px;
    text-align: center;
    transition: background-color .2s;    
    width: 260px;
    
    &:hover {
        color: #24253A;
        background-color: #F7FBD2;
    }
}

#support_image {
    text-align: center;
}

#star6 {
    top: 20px;
    right: calc(50% + 131px);
    animation: blink 5s infinite;
}

#star7 {
    top: -30px;
    right: calc(50% - 183px);
    animation: blink 4s infinite;
}

#star8 {
    top: 76px;
    right: calc(50% - 280px);
    animation: blink 3s infinite;
}

#star9 {
    top: 204px;
    right: calc(50% - 250px);
    animation: blink 6s infinite;
}

#star10 {
    top: 256px;
    right: calc(50% + 242px);
    animation: blink 3s infinite;
}

#star11 {
    top: 272px;
    right: calc(50% + 254px);
    animation: blink 4s infinite;
}

#star12 {
    top: 372px;
    right: calc(50% - 38px);
    animation: blink 7s infinite;
}


/* GET INVOLVED */

#get_involved_container {
    margin-top: -185px;
    height: 455px;
}

#cloud_15 {
    position: relative;
    right: 450px;

}

#cloud_16 {
    position: relative;
    top: -400px;
    right: 230px;
}

#cloud_17 {
    position: relative;
    top: -600px;
    right: 32px;
    transform: scaleX(-1);
}

#cloud_18 {
    position: relative;
    top: -783px;
    right: -549px;
    transform: rotate(-5deg);
}

#cloud_19 {
    position: relative;
    top: -1140px;
    right: -1005px;
}
/* ... */

